// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error flash message (snapshot) 1`] = `
<div
  className="flashmessage open error"
>
  <div
    className="icon"
  >
    <span
      className="material-icons "
      color=""
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "display": "inline-block",
          "fontSize": 24,
          "muiPrepared": true,
          "position": "relative",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "userSelect": "none",
        }
      }
    >
      error_outline
    </span>
  </div>
  <label
    className="message"
  >
    An error message
  </label>
  <label
    className="close"
    onClick={[Function]}
  >
    <span
      className="material-icons "
      color="inherit"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "color": "inherit",
          "display": "inline-block",
          "fontSize": 24,
          "muiPrepared": true,
          "position": "relative",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "userSelect": "none",
        }
      }
    >
      close
    </span>
  </label>
</div>
`;

exports[`Info flash message (snapshot) 1`] = `
<div
  className="flashmessage open info"
>
  <div
    className="icon"
  >
    <span
      className="material-icons "
      color=""
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "display": "inline-block",
          "fontSize": 24,
          "muiPrepared": true,
          "position": "relative",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "userSelect": "none",
        }
      }
    >
      info_outline
    </span>
  </div>
  <label
    className="message"
  >
    An info message
  </label>
  <label
    className="close"
    onClick={undefined}
  >
    <span
      className="material-icons "
      color="inherit"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "color": "inherit",
          "display": "inline-block",
          "fontSize": 24,
          "muiPrepared": true,
          "position": "relative",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "userSelect": "none",
        }
      }
    >
      close
    </span>
  </label>
</div>
`;

exports[`Success flash message (snapshot) 1`] = `
<div
  className="flashmessage open success"
>
  <div
    className="icon"
  >
    <span
      className="material-icons "
      color=""
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "display": "inline-block",
          "fontSize": 24,
          "muiPrepared": true,
          "position": "relative",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "userSelect": "none",
        }
      }
    >
      done
    </span>
  </div>
  <label
    className="message"
  >
    A success message
  </label>
  <label
    className="close"
    onClick={undefined}
  >
    <span
      className="material-icons "
      color="inherit"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "color": "inherit",
          "display": "inline-block",
          "fontSize": 24,
          "muiPrepared": true,
          "position": "relative",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "userSelect": "none",
        }
      }
    >
      close
    </span>
  </label>
</div>
`;
